# invvy

./: .gitignore  README.md  SECURITY.md  render.yaml  vercel.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  api.ts  index.css  types.ts
client/src/components/: AppLayout.tsx  AuthRedirect.tsx  DashboardBar.tsx  DashboardPageHeader.tsx  Modal.tsx  ProtectedRoute.tsx  chart-area-interactive.tsx
client/src/components/ui/: sidebar.tsx
client/src/pages/: CategoryItems.tsx  Dashboard.tsx  Inventories.tsx  InventoryCategories.tsx  InventoryDetail.tsx  Items.tsx  Login.tsx  Register.tsx
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
server/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_auth.py  test_inventories.py  test_items.py
